[metadata]
name = django-cryptography-5
version = attr: django_cryptography.__version__
url = https://github.com/saaspegasus/django-cryptography
author = George Marshall, Cory Zue
author_email = george@georgemarshall.name, cory@coryzue.com
description = Easily encrypt data in Django
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Security :: Cryptography
project_urls =
    Bug Reports = https://github.com/georgemarshall/django-cryptography/issues
    Source = https://github.com/saaspegasus/django-cryptography
    Documentation = https://django-cryptography.readthedocs.io

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    Django>=2.2
    cryptography>=3.4.4
    django-appconf
    typing-extensions>=3.7.4.3

[options.extras_require]
mypy =
    django-stubs
    mypy

[options.package_data]
django_cryptography = py.typed

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203

[options.packages.find]
include = django_cryptography*
